[gd_scene load_steps=98 format=3 uid="uid://b3nwx0erq4kqx"]

[ext_resource type="Script" path="res://components/scripts/jack.gd" id="1_4tu1l"]
[ext_resource type="PackedScene" uid="uid://336wl2jspobc" path="res://scenes/miscellaneous/hitmarker.tscn" id="2_wfp2a"]
[ext_resource type="Texture2D" uid="uid://o1s5vs53dc4a" path="res://components/sprites/jack/jack_damaged_p.png" id="3_84yut"]
[ext_resource type="PackedScene" uid="uid://dxg3446h3vq6m" path="res://scenes/characters/jack_bullet_projectile.tscn" id="3_wfqrd"]
[ext_resource type="Texture2D" uid="uid://bxnjew7afln68" path="res://components/sprites/jack/jack_bullet_icon.png" id="4_kwi4y"]
[ext_resource type="FontFile" uid="uid://ct7fhrwy7parr" path="res://components/fonts/basis33.ttf" id="4_q3k4l"]
[ext_resource type="Texture2D" uid="uid://ctcf43dptrdq1" path="res://components/sprites/jack/jack_idle.png" id="4_xllxl"]
[ext_resource type="Texture2D" uid="uid://n5eeephddexo" path="res://components/sprites/jack/jack_shooting_p.png" id="5_ltcqf"]
[ext_resource type="Texture2D" uid="uid://btjg1uvmks8gk" path="res://components/sprites/jack/jack_running_p.png" id="5_pnxoj"]
[ext_resource type="Texture2D" uid="uid://vgy3nolswcyb" path="res://components/sprites/jack/jack_p_reload.png" id="7_ndigt"]
[ext_resource type="Texture2D" uid="uid://dvnwhqmbty7l8" path="res://components/sprites/jack/jack_flashbang_p.png" id="8_cjjla"]
[ext_resource type="Texture2D" uid="uid://dyy88jjv1m7uy" path="res://components/sprites/jack/jack_p_running_reload.png" id="10_2n7ii"]
[ext_resource type="Texture2D" uid="uid://biqmbnmpa1vxs" path="res://components/sprites/GUI/status_alert/buff_animation.png" id="15_jbtqq"]
[ext_resource type="Texture2D" uid="uid://cixwjw2tvf78u" path="res://components/sprites/GUI/status_alert/debuff_animation.png" id="16_ww3j4"]
[ext_resource type="Texture2D" uid="uid://da0dj4l15d4d5" path="res://components/sprites/GUI/status_alert/recover_animation.png" id="17_aunrm"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_lpx2l"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7ao2f"]
atlas = ExtResource("5_ltcqf")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkp7v"]
atlas = ExtResource("5_ltcqf")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qd4t"]
atlas = ExtResource("5_ltcqf")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghbs4"]
atlas = ExtResource("5_ltcqf")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sen44"]
atlas = ExtResource("3_84yut")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_klxuw"]
atlas = ExtResource("3_84yut")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lv0d3"]
atlas = ExtResource("8_cjjla")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8411"]
atlas = ExtResource("8_cjjla")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5aoh1"]
atlas = ExtResource("8_cjjla")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pncoh"]
atlas = ExtResource("8_cjjla")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_diqi6"]
atlas = ExtResource("8_cjjla")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_runl0"]
atlas = ExtResource("8_cjjla")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4usv"]
atlas = ExtResource("4_xllxl")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbdow"]
atlas = ExtResource("4_xllxl")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1cht3"]
atlas = ExtResource("4_xllxl")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v7jjd"]
atlas = ExtResource("7_ndigt")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_06shm"]
atlas = ExtResource("7_ndigt")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_axlg7"]
atlas = ExtResource("7_ndigt")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3hdd"]
atlas = ExtResource("7_ndigt")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m37dv"]
atlas = ExtResource("7_ndigt")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay7r6"]
atlas = ExtResource("7_ndigt")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5nlt"]
atlas = ExtResource("7_ndigt")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn8fa"]
atlas = ExtResource("7_ndigt")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrft5"]
atlas = ExtResource("7_ndigt")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xnnkq"]
atlas = ExtResource("7_ndigt")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3t6ui"]
atlas = ExtResource("5_pnxoj")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_140sg"]
atlas = ExtResource("5_pnxoj")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlx2l"]
atlas = ExtResource("5_pnxoj")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4lgq"]
atlas = ExtResource("5_pnxoj")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx0pp"]
atlas = ExtResource("10_2n7ii")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wp86x"]
atlas = ExtResource("10_2n7ii")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxco1"]
atlas = ExtResource("10_2n7ii")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_aj0ra"]
atlas = ExtResource("10_2n7ii")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqk4u"]
atlas = ExtResource("10_2n7ii")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1gp6"]
atlas = ExtResource("10_2n7ii")
region = Rect2(256, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gqdg"]
atlas = ExtResource("10_2n7ii")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jphjs"]
atlas = ExtResource("10_2n7ii")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vl5n"]
atlas = ExtResource("10_2n7ii")
region = Rect2(256, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_you0w"]
atlas = ExtResource("10_2n7ii")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b2htc"]
atlas = ExtResource("5_ltcqf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4dd52"]
atlas = ExtResource("5_ltcqf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmnpe"]
atlas = ExtResource("5_ltcqf")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vini2"]
atlas = ExtResource("5_ltcqf")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8odc"]
atlas = ExtResource("5_ltcqf")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu8p2"]
atlas = ExtResource("5_ltcqf")
region = Rect2(128, 256, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_dte57"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ao2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkp7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qd4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghbs4")
}],
"loop": false,
"name": &"p_continue_shooting",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sen44")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klxuw")
}],
"loop": false,
"name": &"p_damaged",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lv0d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8411")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5aoh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pncoh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_diqi6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_runl0")
}],
"loop": false,
"name": &"p_flashbang",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4usv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbdow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1cht3")
}],
"loop": true,
"name": &"p_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v7jjd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_06shm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_axlg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3hdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m37dv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay7r6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5nlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn8fa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrft5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xnnkq")
}],
"loop": false,
"name": &"p_reload",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3t6ui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_140sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlx2l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4lgq")
}],
"loop": true,
"name": &"p_running",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx0pp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wp86x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxco1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aj0ra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqk4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1gp6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gqdg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jphjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vl5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_you0w")
}],
"loop": false,
"name": &"p_running_reload",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b2htc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4dd52")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmnpe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vini2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8odc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu8p2")
}],
"loop": false,
"name": &"p_shooting",
"speed": 12.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4uuxm"]
atlas = ExtResource("15_jbtqq")
region = Rect2(0, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_3bkqm"]
atlas = ExtResource("15_jbtqq")
region = Rect2(1764, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8522"]
atlas = ExtResource("15_jbtqq")
region = Rect2(3528, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_xh1f5"]
atlas = ExtResource("15_jbtqq")
region = Rect2(0, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_800lp"]
atlas = ExtResource("15_jbtqq")
region = Rect2(1764, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5753"]
atlas = ExtResource("15_jbtqq")
region = Rect2(3528, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_7f3jk"]
atlas = ExtResource("15_jbtqq")
region = Rect2(0, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_hyb8m"]
atlas = ExtResource("15_jbtqq")
region = Rect2(1764, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_pc3fx"]
atlas = ExtResource("15_jbtqq")
region = Rect2(3528, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_66f3u"]
atlas = ExtResource("15_jbtqq")
region = Rect2(0, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f0g6"]
atlas = ExtResource("15_jbtqq")
region = Rect2(1764, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4byr"]
atlas = ExtResource("16_ww3j4")
region = Rect2(0, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtkey"]
atlas = ExtResource("16_ww3j4")
region = Rect2(1764, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifvtr"]
atlas = ExtResource("16_ww3j4")
region = Rect2(3528, 0, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3mol"]
atlas = ExtResource("16_ww3j4")
region = Rect2(0, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_im352"]
atlas = ExtResource("16_ww3j4")
region = Rect2(1764, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rhfn"]
atlas = ExtResource("16_ww3j4")
region = Rect2(3528, 1764, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_iagy6"]
atlas = ExtResource("16_ww3j4")
region = Rect2(0, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_f630m"]
atlas = ExtResource("16_ww3j4")
region = Rect2(1764, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nj0r"]
atlas = ExtResource("16_ww3j4")
region = Rect2(3528, 3528, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_k1wdv"]
atlas = ExtResource("16_ww3j4")
region = Rect2(0, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_jimrb"]
atlas = ExtResource("16_ww3j4")
region = Rect2(1764, 5292, 1764, 1764)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qn0j"]
atlas = ExtResource("17_aunrm")
region = Rect2(0, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhx6m"]
atlas = ExtResource("17_aunrm")
region = Rect2(1248, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_hjta2"]
atlas = ExtResource("17_aunrm")
region = Rect2(2496, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_tt2x7"]
atlas = ExtResource("17_aunrm")
region = Rect2(3744, 0, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp7xq"]
atlas = ExtResource("17_aunrm")
region = Rect2(0, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbqni"]
atlas = ExtResource("17_aunrm")
region = Rect2(1248, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkuak"]
atlas = ExtResource("17_aunrm")
region = Rect2(2496, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3o8n"]
atlas = ExtResource("17_aunrm")
region = Rect2(3744, 1760, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_u6vsw"]
atlas = ExtResource("17_aunrm")
region = Rect2(0, 3520, 1248, 1760)

[sub_resource type="AtlasTexture" id="AtlasTexture_o52ho"]
atlas = ExtResource("17_aunrm")
region = Rect2(1248, 3520, 1248, 1760)

[sub_resource type="SpriteFrames" id="SpriteFrames_biutr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4uuxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3bkqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8522")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xh1f5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_800lp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5753")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7f3jk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hyb8m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pc3fx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66f3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f0g6")
}],
"loop": false,
"name": &"buff",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4byr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtkey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifvtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3mol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im352")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rhfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iagy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f630m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nj0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k1wdv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jimrb")
}],
"loop": false,
"name": &"debuff",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qn0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhx6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hjta2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tt2x7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp7xq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbqni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkuak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3o8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u6vsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o52ho")
}],
"loop": false,
"name": &"recover",
"speed": 20.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xdive"]
radius = 15.5556
height = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_m12o2"]
radius = 484.444

[node name="CharacterBody2D" type="CharacterBody2D"]
process_mode = 1
y_sort_enabled = true
scale = Vector2(0.9, 0.9)
motion_mode = 1
script = ExtResource("1_4tu1l")
damage_node = ExtResource("2_wfp2a")
bullet_scene = ExtResource("3_wfqrd")

[node name="Control" type="Control" parent="."]
z_index = 6
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.44444
offset_top = -48.8889
offset_right = -4.44444
offset_bottom = -48.8889
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -31.0
offset_right = 24.5
grow_horizontal = 2
grow_vertical = 0

[node name="TextureRect" type="TextureRect" parent="Control/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_kwi4y")
expand_mode = 2
stretch_mode = 5

[node name="Label" type="Label" parent="Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("4_q3k4l")
theme_override_font_sizes/font_size = 32
text = "x0"
horizontal_alignment = 1

[node name="Hitmarker_spawn" type="Marker2D" parent="."]
position = Vector2(1.11111, -55.5556)

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("CanvasItemMaterial_lpx2l")
scale = Vector2(1.2, 1.2)
sprite_frames = SubResource("SpriteFrames_dte57")
animation = &"p_flashbang"
autoplay = "p_idle"

[node name="Status_alert_sprite" type="AnimatedSprite2D" parent="."]
y_sort_enabled = true
position = Vector2(-2.38419e-07, 10)
scale = Vector2(0.0609922, 0.0609922)
sprite_frames = SubResource("SpriteFrames_biutr")
animation = &"idle"
autoplay = "idle"

[node name="Body_collider" type="CollisionShape2D" parent="."]
position = Vector2(1.11111, 3.33333)
shape = SubResource("CapsuleShape2D_xdive")
debug_color = Color(1, 1, 0, 0.0666667)

[node name="Bullets_spawnpoint" type="Marker2D" parent="."]
position = Vector2(40, -14.4444)

[node name="Flashbang_area" type="Area2D" parent="."]

[node name="Collider" type="CollisionShape2D" parent="Flashbang_area"]
shape = SubResource("CircleShape2D_m12o2")
debug_color = Color(0.772549, 0.0980392, 0.701961, 0.0235294)

[node name="Skill1_cooldown" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="Skill2_cooldown" type="Timer" parent="."]
wait_time = 9.0
one_shot = true

[node name="Eva_cooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Ulti_cooldown" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Shooting_delay_time" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Reaction_time" type="Timer" parent="."]
wait_time = 0.061
one_shot = true

[node name="Stun" type="Timer" parent="."]
one_shot = true

[connection signal="get_healed" from="." to="." method="_on_get_healed"]
[connection signal="set_idle" from="." to="." method="_on_set_idle"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="frame_changed" from="Sprite2D" to="." method="_on_sprite_2d_frame_changed"]
[connection signal="animation_finished" from="Status_alert_sprite" to="." method="_on_status_alert_sprite_animation_finished"]
[connection signal="body_entered" from="Flashbang_area" to="." method="_on_flashbang_area_body_entered"]
[connection signal="body_exited" from="Flashbang_area" to="." method="_on_flashbang_area_body_exited"]
[connection signal="timeout" from="Shooting_delay_time" to="." method="_on_shooting_delay_time_timeout"]
[connection signal="timeout" from="Reaction_time" to="." method="_on_reaction_time_timeout"]
[connection signal="timeout" from="Stun" to="." method="_on_stun_timeout"]
